--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <img src="./images/illustration-mockups.svg" alt="">
       </section>
       <section class="growtogether">
-        <img src="./images/illustration-grow-together.svg" alt="">
+        <div class="image-grow">
+          <img src="./images/illustration-grow-together.svg" alt="">
+        </div>
+       
         <div class="growp-para">
           <h1 class="growtitle"> Grow Together </h1>
           <p class="growpg"> Generate meaningful discussions with your audience and build a strong, loyal community.
