check html syntax its always the problem

--- a/index.html
+++ b/index.html
@@ -22,19 +22,23 @@
           <button class="try-free">Try It Free</button>
         </header>
         <div class="text-hero">
-          <h1 class="main-title"> Build The Community Your Fans Will Love </h1>
-          <p class="front-paragraph">
-            Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-            Create connections with your users as you engage in genuine discussion. </p>
-          <button class="starting"> Get Started For Free</button>
+          <div class="hero-para">
+            <h1 class="main-title"> Build The Community Your Fans Will Love </h1>
+            <p class="front-paragraph">
+              Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+              Create connections with your users as you engage in genuine discussion. </p>
+            <button class="starting"> Get Started For Free</button>
+          </div>
+          <div class="image-grow">
+            <img src="./images/illustration-mockups.svg" alt="">
+          </div>
         </div>
-        <img src="./images/illustration-mockups.svg" alt="">
       </section>
       <section class="growtogether">
         <div class="image-grow">
           <img src="./images/illustration-grow-together.svg" alt="">
         </div>
-       
+
         <div class="growp-para">
           <h1 class="growtitle"> Grow Together </h1>
           <p class="growpg"> Generate meaningful discussions with your audience and build a strong, loyal community.
@@ -42,7 +46,9 @@
         </div>
       </section>
       <section class="flowing-conv">
-        <img src="./images/illustration-flowing-conversation.svg" alt="">
+        <div class="image-grow">
+          <img src="./images/illustration-flowing-conversation.svg" alt="">
+        </div>
         <div class="growp-para">
           <h1 class="growtitle"> Flowing Conversations </h1>
           <p class="growpg"> You wouldn't paginate a conversation in real life, so why do it online? Our threads
@@ -50,7 +56,10 @@
         </div>
       </section>
       <section class="users">
-        <img src="./images/illustration-your-users.svg" alt="">
+        <div class="image-grow">
+          <img src="./images/illustration-your-users.svg" alt="">
+        </div>
+
         <div class="growp-para">
           <h1 class="growtitle"> Your Users </h1>
           <p class="growpg"> It takes no time at all to integrate Huddle with your app's authentication solution.
