--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="image-grow">
           <img src="./images/illustration-flowing-conversation.svg" alt="">
         </div>
-        <div class="growp-para">
+        <div class="growp-flow">
           <h1 class="growtitle"> Flowing Conversations </h1>
           <p class="growpg"> You wouldn't paginate a conversation in real life, so why do it online? Our threads
             have just-in-time loading for a more natural flow. </p>
