--- a/index.html
+++ b/index.html
@@ -72,30 +72,44 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="footer-desc">
-        <img src="./images/logo.svg" alt="">
-        <div class="footer-desc"> <img src="./images/icon-location.svg" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua </p>
+      <div class="footer_wrapper">
+        <div class="footer-desc">
+          <img class="logo-footer" src="./images/logo.svg" alt="">
+          <div class="footer-desc"> <img src="./images/icon-location.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua </p>
+          </div>
+          <div class="phone">
+            <img src="./images/icon-phone.svg" alt="">
+            <p> +1-543-123-4567 </p>
+          </div>
+          <div class="mail">
+            <img src="images/icon-email.svg" alt="">
+            <p class="mail">example@huddle.com</p>
+          </div>
         </div>
-        <div class="phone">
-          <img src="./images/icon-phone.svg" alt="">
-          <p> +1-543-123-4567 </p>
+        <ul class="adivce">
+          <li>About Us </li>
+          <li> What We Do </li>
+          <li>FAQ</li>
+        </ul>
+        <ul class="career">
+          <li>Career</li>
+          <li>Blog</li>
+          <li>Contact Us</li>
+        </ul>
+        <div class="social">
+          <a href="#">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-instagram"></i>
+          </a>
+
         </div>
-        <div class="mail">
-          <img src="images/icon-email.svg" alt="">
-          <p class="mail">example@huddle.com</p>
-        </div>
-      </div>
-      <div class="adivce">
-        <a href="">About Us </a>
-        <a href=""> What We Do </a>
-        <a href="">FAQ</a>
-      </div>
-      <div class="career">
-        <a href="">Career</a>
-        <a href="">Blog</a>
-        <a href="">Contact Us</a>
       </div>
       <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
       <p class="attribution">
