--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
   <link rel="stylesheet" href="style.css">
@@ -74,8 +76,8 @@
     <footer class="footer">
       <div class="footer_wrapper">
         <div class="footer-desc">
-          <img class="logo-footer" src="./images/logo.svg" alt="">
-          <div class="footer-desc"> <img src="./images/icon-location.svg" alt="">
+          <img class="logo-footer" src="./images/logo-footer.svg" alt="">
+          <div class="footer-desciption"> <img src="./images/icon-location.svg" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut labore et dolore magna aliqua </p>
           </div>
