--- a/index.html
+++ b/index.html
@@ -77,16 +77,17 @@
       <div class="footer_wrapper">
         <div class="footer-desc">
           <img class="logo-footer" src="./images/logo-footer.svg" alt="">
-          <div class="footer-desciption"> <img src="./images/icon-location.svg" alt="">
+          <div class="footer-desciption"> 
+            <img class="foot-img" src="./images/icon-location.svg" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut labore et dolore magna aliqua </p>
           </div>
           <div class="phone">
-            <img src="./images/icon-phone.svg" alt="">
+            <img class="foot-img" src="./images/icon-phone.svg" alt="">
             <p> +1-543-123-4567 </p>
           </div>
           <div class="mail">
-            <img src="images/icon-email.svg" alt="">
+            <img class="foot-img" src="images/icon-email.svg" alt="">
             <p class="mail">example@huddle.com</p>
           </div>
         </div>
