--- a/index.html
+++ b/index.html
@@ -16,111 +16,112 @@
 </head>
 
 <body>
-  
-    <main class="main-card">
-      <section class="main-hero">
-        <header class="header">
-          <img src="./images/logo.svg" alt="logo">
-          <button class="try-free">Try It Free</button>
-        </header>
-        <div class="text-hero">
-          <div class="hero-para">
-            <h1 class="main-title"> Build The Community Your Fans Will Love </h1>
-            <p class="front-paragraph">
-              Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-              Create connections with your users as you engage in genuine discussion. </p>
-            <button class="starting"> Get Started For Free</button>
-          </div>
-          <div class="image-grow">
-            <img src="./images/illustration-mockups.svg" alt="">
-          </div>
-        </div>
-      </section>
-      <section class="growtogether">
-        <div class="image-grow">
-          <img src="./images/illustration-grow-together.svg" alt="">
-        </div>
 
-        <div class="growp-para">
-          <h1 class="growtitle"> Grow Together </h1>
-          <p class="growpg"> Generate meaningful discussions with your audience and build a strong, loyal community.
-            Think of the insightful conversations you miss out on with a feedback form. </p>
+  <main class="main-card">
+    <section class="main-hero">
+      <header class="header">
+        <img src="./images/logo.svg" alt="logo">
+        <button class="try-free">Try It Free</button>
+      </header>
+      <div class="text-hero">
+        <div class="hero-para">
+          <h1 class="main-title"> Build The Community Your Fans Will Love </h1>
+          <p class="front-paragraph">
+            Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+            Create connections with your users as you engage in genuine discussion. </p>
+          <button class="starting"> Get Started For Free</button>
         </div>
-      </section>
-      <section class="flowing-conv">
         <div class="image-grow">
-          <img src="./images/illustration-flowing-conversation.svg" alt="">
+          <img src="./images/illustration-mockups.svg" alt="">
         </div>
-        <div class="growp-flow">
-          <h1 class="growtitle"> Flowing Conversations </h1>
-          <p class="growpg"> You wouldn't paginate a conversation in real life, so why do it online? Our threads
-            have just-in-time loading for a more natural flow. </p>
-        </div>
-      </section>
-      <section class="users">
-        <div class="image-grow">
-          <img src="./images/illustration-your-users.svg" alt="">
-        </div>
-
-        <div class="growp-para">
-          <h1 class="growtitle"> Your Users </h1>
-          <p class="growpg"> It takes no time at all to integrate Huddle with your app's authentication solution.
-            This means, once signed in to your app, your users can start chatting immediately. </p>
-        </div>
-      </section>
-      <div class="buildcommunity">
-        <h2 class="buildcom-title">Ready To Build Your Community?</h2>
-        <button class="start-free"> Get Started For Free </button>
       </div>
-    </main>
-    <footer class="footer">
-      <div class="footer_wrapper">
-        <div class="footer-desc">
-          <img class="logo-footer" src="./images/logo-footer.svg" alt="">
-          <div class="footer-desciption"> 
-            <img class="foot-img" src="./images/icon-location.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua </p>
-          </div>
-          <div class="phone">
-            <img class="foot-img" src="./images/icon-phone.svg" alt="">
-            <p> +1-543-123-4567 </p>
-          </div>
-          <div class="mail">
-            <img class="foot-img" src="images/icon-email.svg" alt="">
-            <p class="mail">example@huddle.com</p>
-          </div>
+    </section>
+    <section class="growtogether">
+      <div class="image-grow">
+        <img src="./images/illustration-grow-together.svg" alt="">
+      </div>
+
+      <div class="growp-para">
+        <h1 class="growtitle"> Grow Together </h1>
+        <p class="growpg"> Generate meaningful discussions with your audience and build a strong, loyal community.
+          Think of the insightful conversations you miss out on with a feedback form. </p>
+      </div>
+    </section>
+    <section class="flowing-conv">
+      <div class="image-grow">
+        <img src="./images/illustration-flowing-conversation.svg" alt="">
+      </div>
+      <div class="growp-flow">
+        <h1 class="growtitle"> Flowing Conversations </h1>
+        <p class="growpg"> You wouldn't paginate a conversation in real life, so why do it online? Our threads
+          have just-in-time loading for a more natural flow. </p>
+      </div>
+    </section>
+    <section class="users">
+      <div class="image-grow">
+        <img src="./images/illustration-your-users.svg" alt="">
+      </div>
+
+      <div class="growp-para">
+        <h1 class="growtitle"> Your Users </h1>
+        <p class="growpg"> It takes no time at all to integrate Huddle with your app's authentication solution.
+          This means, once signed in to your app, your users can start chatting immediately. </p>
+      </div>
+    </section>
+    <div class="buildcommunity">
+      <h2 class="buildcom-title">Ready To Build Your Community?</h2>
+      <button class="start-free"> Get Started For Free </button>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="footer_wrapper">
+      <div class="footer-desc">
+        <img class="logo-footer" src="./images/logo-footer.svg" alt="">
+        <div class="footer-desciption">
+          <img class="foot-img" src="./images/icon-location.svg" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua </p>
         </div>
-        <ul class="adivce">
+        <div class="phone">
+          <img class="foot-img" src="./images/icon-phone.svg" alt="">
+          <p> +1-543-123-4567 </p>
+        </div>
+        <div class="mail">
+          <img class="foot-img" src="images/icon-email.svg" alt="">
+          <p class="mail">example@huddle.com</p>
+        </div>
+      </div>
+      <nav class="navigation">
+        <ul class="advice">
           <li>About Us </li>
-          <li> What We Do </li>
+          <li>What We Do </li>
           <li>FAQ</li>
-        </ul>
-        <ul class="career">
           <li>Career</li>
           <li>Blog</li>
           <li>Contact Us</li>
         </ul>
-        <div class="social">
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-instagram"></i>
-          </a>
+      </nav>
 
-        </div>
+      <div class="social">
+        <a href="#">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-instagram"></i>
+        </a>
+
       </div>
-      <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer>
-  
+    </div>
+    <p class="copyright">&copy; Copyright 2018 Huddle. All rights reserved.</p>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+  </footer>
+
 </body>
 
 </html>
